test/compile_errors/err_public_fn_missing_return_type.w
//! expect-check-fail: public function declarations require an explicit return type

pub fn exported:
    1

fn main:
    let _ = exported()
